--- a/block-BHaaaq/style.css
+++ b/block-BHaaaq/style.css
@@ -164,6 +164,11 @@ select {
     vertical-align: middle;
 }
 
+header {
+    font-size: 30px;
+    margin-top: 45px;
+}
+
 .block-one {
     background-color: red;
     width: 150px;
