Section one update

--- a/block-BHaaaq/style.css
+++ b/block-BHaaaq/style.css
@@ -189,7 +189,7 @@ header {
     background-color: red;
     width: 150px;
     height: 150px;
-    border: 10px solid black;
+    border: 10px double black;
     margin: 20px;
 }
 
