--- a/block-BHaaau/style.css
+++ b/block-BHaaau/style.css
@@ -179,12 +179,15 @@ h2 {
     margin: 40px 0px;
 }
 
-/* .box-one {
-    width: 250px;
-    height: 250px;
-    background-color: lightgreen;
+.box-one {
+    width: 200px;
+    height: 200px;
+    background-color: #DAFAD4;
     margin: auto;
-} */
+    border: 20px solid #ADD8E6;
+    outline: 10px solid black;
+    box-shadow: 0 0 0 30px red;
+}
 
 .box-two {
     display: flex;
@@ -225,6 +228,7 @@ h2 {
 p {
     font-size: 25px;
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .box-four {
